--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-         <div style="margin: auto; position: relative; float: left; top: 0; right: 100px; z-index: 2;">
+         <div style="margin: auto; position: relative; float: right; top: 0; right: 100px; z-index: 2;">
             <h2>Controls</h2>
             * Arrow Keys to Move * <br>
             * A/D to Turn Left/Right * <br>
